--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
     name: Build and test
     strategy:
       matrix:
-        libcamera_version: ["v0.4.0", "v0.5.0", "v0.5.1", "v0.5.2", "v0.6.0"]
+        libcamera_version: ["v0.4.0", "v0.5.0", "v0.5.1", "v0.5.2", "v0.6.0", "v0.7.0"]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
